--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^3.1.9",
     "express": "^4.16.3",
+    "i": "^0.3.7",
+    "mongoose": "^8.19.4",
     "npm": "^9.8.1"
   }
 }
